--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +23,8 @@
     "#middlewares/*": "./src/middlewares/*",
     "#user/*": "./src/routes/user/*",
     "#auth/*": "./src/routes/auth/*"
+  },
+  "devDependencies": {
+    "prisma": "^6.15.0"
   }
 }
